--- a/MEducation/package.json
+++ b/MEducation/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "qs": "^6.10.1",
     "view-design": "^4.5.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
